--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "testdata for the fantasy/scifi enthusiast",
   "main": "index.js",
   "scripts": {
-    "testjs": "mocha test/*.test.js",
-    "test": "mocha --timeout=10000 test/chaiSetup.js test/*.test.ts --require ts-node/register --recursive --prof --ui tdd --throw-deprecation"
+    "test": "mocha --timeout=10000 test/*.test.ts --require ts-node/register --recursive --prof --ui tdd --throw-deprecation"
   },
   "repository": {
     "type": "git",
