--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@types/lodash": "4.14.118",
     "@types/mocha": "5.2.5",
     "@types/node": "10.12.9",
+    "@types/sinon": "5.0.7",
     "chai": "4.2.0",
     "mocha": "5.2.0",
+    "sinon": "7.1.1",
     "ts-node": "7.0.1",
     "typescript": "3.1.6"
   }
