--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nerdata",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "testdata for the fantasy/scifi enthusiast",
   "main": "lib/index.js",
   "scripts": {
@@ -13,6 +13,10 @@
   },
   "author": "drigberg",
   "license": "ISC",
+  "files": [
+    "data",
+    "lib"
+  ],
   "bugs": {
     "url": "https://github.com/drigberg/nerdata/issues"
   },
