--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "compile": "tsc --declaration",
+    "lint": "tslint -p . --fix",
     "test": "mocha --timeout=10000 test/*.test.ts test/**/*.test.ts --require ts-node/register --recursive --prof --ui tdd --throw-deprecation"
   },
   "repository": {
@@ -36,6 +37,7 @@
     "mocha": "5.2.0",
     "sinon": "7.1.1",
     "ts-node": "7.0.1",
+    "tslint": "5.11.0",
     "typescript": "3.1.6"
   }
 }
