--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
     "node_modules"
   ],
   "include": [
-    "src/*.d.ts",
-    "src/*.ts",
-    "test/*.ts"
+    "src/**/*.d.ts",
+    "src/**/*.ts",
+    "test/**/*.ts"
   ],
   "typeRoots": [
     "node_modules/@types"
