--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "compile": "npm run compile-ts && npm run copy-data && npm run generate-flow-types",
     "compile-ts": "tsc --declaration",
     "generate-flow-types": "bash generate_flow_types.sh && node replace_flow_headers.js",
-    "lint": "tslint -p . --fix",
+    "lint": "eslint . --fix --ext ts",
     "test": "mocha --timeout=10000 test/*.test.ts test/**/*.test.ts --require ts-node/register --recursive --prof --ui tdd --throw-deprecation"
   },
   "repository": {
@@ -29,12 +29,13 @@
     "@types/chai": "4.1.7",
     "@types/mocha": "5.2.5",
     "@types/node": "10.12.9",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
     "chai": "4.2.0",
+    "eslint": "^6.8.0",
     "flow-bin": "^0.141.0",
     "flow-coverage-report": "^0.8.0",
     "mocha": "^8.2.1",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
 }
